sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: ':' expected but ')' found.
def bubbleSort(num)  {
                  ^AlgBubbleSort1:21: error: identifier expected but '}' found.
}
^